[gd_scene load_steps=6 format=2]

[ext_resource path="res://Team.tscn" type="PackedScene" id=1]
[ext_resource path="res://ObjectiveNPC.gd" type="Script" id=3]
[ext_resource path="res://assets/tilesheet_complete.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 250, 250 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 1484, 268, 40, 40 )

[node name="ObjectiveNPC" type="Area2D"]
modulate = Color( 0.129412, 0.156863, 0.333333, 1 )
position = Vector2( 381.243, 140.866 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 2 )

[node name="Team" parent="." instance=ExtResource( 1 )]

[node name="CaptureTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_ObjectiveNPC_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ObjectiveNPC_body_exited"]
[connection signal="timeout" from="CaptureTimer" to="." method="_on_CaptureTimer_timeout"]
